# my_tbai_implementation

./: .gitmodules  README.md
metal_head_v1m1_m4_with_arm_fixed_4/: CMakeLists.txt  package.xml
metal_head_v1m1_m4_with_arm_fixed_4/config/: joint_names_metal_head_v1m1_m4_with_arm_fixed_4.yaml
metal_head_v1m1_m4_with_arm_fixed_4/launch/: display.launch  gazebo.launch
metal_head_v1m1_m4_with_arm_fixed_4/meshes/: Arm_Link.STL  Link01_BL.STL  Link01_BR.STL  Link01_FL.STL  Link01_FR.STL  Link03_BL.STL  Link03_BR.STL  Link03_FL.STL  Link03_FR.STL  Link04_BL.STL  Link04_BR.STL  Link04_FL.STL  Link04_FR.STL
metal_head_v1m1_m4_with_arm_fixed_4/urdf/: metal_head_v1m1_m4_with_arm_fixed_4.csv  metal_head_v1m1_m4_with_arm_fixed_4.urdf
my_gazebo_plugins/: CMakeLists.txt  package.xml
my_gazebo_plugins/include/my_gazebo_plugins/: MyContactSensor.hpp
my_gazebo_plugins/src/: MyContactSensor.cpp
my_tbai_description/: CMakeLists.txt  package.xml
my_tbai_description/urdf/: anymal_d_gazebo.urdf.xacro  metal_head_gazebo.urdf.xacro
my_tbai_gazebo/: CMakeLists.txt  controller_plugins.xml  package.xml
my_tbai_gazebo/include/my_tbai_gazebo/: ContactSensor.hpp  JointController.hpp  StatePublisher.hpp
my_tbai_gazebo/launch/: world.launch
my_tbai_gazebo/src/: ContactSensor.cpp  JointController.cpp  StatePublisher.cpp
my_tbai_gazebo/worlds/normal/: normal.world
my_tbai_msgs/: CMakeLists.txt  package.xml
my_tbai_msgs/msg/: JointCommand.msg
my_tbai_static/: CMakeLists.txt  package.xml
my_tbai_static/config/: default_config.yaml  metal_head_config.yaml
my_tbai_static/include/: StaticController.hpp
my_tbai_static/include/my_tbai_static/: StaticController.hpp
my_tbai_static/launch/: simple.launch
my_tbai_static/src/: StaticController.cpp  simple.cpp
tbai_core/: CMakeLists.txt  package.xml
tbai_core/cmake/: tbai_cm.cmake
tbai_core/include/tbai_core/: Asserts.hpp  Rotations.hpp  Throws.hpp  Types.hpp  Utils.hpp
tbai_core/include/tbai_core/config/: YamlConfig.hpp
tbai_core/include/tbai_core/config/implementation/: YamlConfig.hpp
tbai_core/include/tbai_core/control/: CentralController.hpp  Controller.hpp  StateSubscriber.hpp
tbai_core/src/config/: YamlConfig.cpp
tbai_core/src/control/: CentralController.cpp  StateSubscriber.cpp
tbai_core/test/: testConfig.cpp
tbai_mpc/: CMakeLists.txt  package.xml
tbai_mpc/include/tbai_mpc/: MpcController.hpp
tbai_mpc/include/tbai_mpc/reference/: ReferenceTrajectoryGenerator.hpp
tbai_mpc/include/tbai_mpc/utils/: LoadConfig.hpp
tbai_mpc/include/tbai_mpc/wbc/: Factory.hpp  HqpSolver.hpp  HqpWbc.hpp  SqpSolver.hpp  SqpWbc.hpp  Task.hpp  WbcBase.hpp
tbai_mpc/launch/: simple.launch
tbai_mpc/src/: MpcController.cpp  MpcNode.cpp  simple.cpp
tbai_mpc/src/reference/: ReferenceTrajectoryGenerator.cpp
tbai_mpc/src/utils/: LoadConfig.cpp
tbai_mpc/src/wbc/: Factory.cpp  HqpSolver.cpp  HqpWbc.cpp  SqpSolver.cpp  SqpWbc.cpp  Task.cpp  WbcBase.cpp
tbai_mpc_blind/: CMakeLists.txt  README.md  package.xml
tbai_mpc_blind/config/: controllers.info  default_config.yaml  task.info
tbai_mpc_blind/launch/: anymal_d.rviz  simple.launch
tbai_mpc_blind/src/: simple.cpp
tbai_mpc_perceptive/: CMakeLists.txt  README.md  package.xml
tbai_mpc_perceptive/config/: convex_plane_decomposition_node.yaml  default_config copy.yaml  default_config.yaml  elevation_mapping.yaml
tbai_mpc_perceptive/launch/: simple.launch
tbai_mpc_perceptive/src/: simple.cpp
tbai_msgs/: CMakeLists.txt  package.xml
tbai_msgs/msg/: RbdState.msg
tbai_reference/: CMakeLists.txt  package.xml
tbai_reference/include/tbai_reference/: ReferenceVelocity.hpp  ReferenceVelocityGenerator.hpp
tbai_reference/launch/: joystick.launch
tbai_reference/src/: ReferenceVelocityGenerator.cpp
