<?xml version="1.0"?>
<package format="2">
  <name>tbai_core</name>
  <version>0.0.0</version>
  <description>The tbai_core package</description>

  <maintainer email="lnotspotl@gmail.com">lnotspotl</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>my_tbai_msgs</depend>
  <depend>ocs2_robotic_assets</depend>
  <depend>ocs2_robotic_tools</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>