<?xml version="1.0"?>
<package format="2">
  <name>tbai_mpc</name>
  <version>0.0.0</version>
  <description>The tbai_mpc package</description>

  <maintainer email="lnotspotl@gmail.com">lnotspotl</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tbai_core</depend>
  <depend>tbai_msgs</depend>
  <depend>ocs2_core</depend>
  <depend>ocs2_mpc</depend>
  <depend>ocs2_msgs</depend>
  <depend>ocs2_ros_interfaces</depend>
  <depend>ocs2_anymal_commands</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_core</depend>

  <depend>ocs2_anymal_mpc</depend>
  <depend>ocs2_ros_interface</depend>
  <depend>ocs2_pinocchio_interface</depend>
  <depend>ocs2_quadruped_interface</depend>
  <depend>ocs2_switched_model_interface</depend>
  <depend>std_msgs</depend>
  <depend>tbai_static</depend>
  <depend>tbai_reference</depend>
  <depend>qpoases_catkin</depend>

  <export>
  </export>
</package>