<?xml version="1.0"?>
<package format="2">
  <name>tbai_reference</name>
  <version>0.0.0</version>
  <description>The tbai_reference package</description>

  <maintainer email="lnotspotl@gmail.com">lnotspotl</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tbai_core</depend>

  <export>
  </export>
</package>